fix dependency issues

--- a/webanno-webapp-home/src/main/resources/de/tudarmstadt/ukp/clarin/webanno/webapp/home/page/webanno.css
+++ b/webanno-webapp-home/src/main/resources/de/tudarmstadt/ukp/clarin/webanno/webapp/home/page/webanno.css
@@ -183,7 +183,7 @@ ul.vcheckboxgroup{
     font-weight:bold;
     font-size:39px;
     vertical-align:middle;
-    background-color:#B90F22;
+    background-color:#669999;
     content:'<div style="clear:both"/>';
     position: relative;
     z-index:99;
